<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Shop App</string>
    <string name="app_home">Home</string>
    <string name="app_favorite">WishList</string>
    <string name="app_history">History</string>
    <string name="app_account">Account</string>
    <string name="app_profile">Account</string>
    <string name="app_password">Change Password</string>
    <string name="shop">Shop</string>
    <string name="explore">Explore</string>
    <string name="cart">Cart</string>
    <string name="favorite">WishList</string>
    <string name="account">Account</string>
    <string name="product_category">Product Categories</string>
    <string name="product_popular">Popular Products</string>
    <string name="view_all">View All</string>
    <string name="promotion">Promotion</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="product">Product</string>
    <string name="hello">Hello</string>
    <string name="sign_in">Sign in to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Login  </string>
    <string name="no_account"> Create.</string>
    <string name="addres_info">Address Information</string>
    <string name="change">Change</string>
    <string name="phone">0762132322</string>
    <string name="address">Hà Nội</string>
    <string name="address_add">+ Add specific address</string>
    <string name="product_list">Product List</string>
    <string name="purchase_summary">Purchase Summary</string>
    <string name="total_price">Total Price</string>
    <string name="price_product"> $</string>
    <string name="ship">Shipping Change</string>
    <string name="total_payment">Total Payment</string>
    <string name="payment">Payment</string>
    <string name="order">Order</string>
    <string name="category">Category</string>
    <string name="two">2</string>
    <string name="payment_momo">Payment Momo</string>
    <string name="user_name">Username</string>
    <string name="user_phone">Phone</string>
    <string name="user_address">Address</string>
    <string name="update">Update</string>
    <string name="otp">Please enter Gmail to receive the OTP</string>
    <string name="email_focus">example@gmail.com</string>
    <string name="request">Send require</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="complete_payment">Complete your payment</string>
    <string name="time">20/02/2023</string>
    <string name="shipping_change">Shipping Change</string>
    <string name="code_orders">Code orders:</string>
    <string name="number">1000000</string>
    <string name="name">Name:</string>
    <string name="number_phone">Phone:</string>
    <string name="address_payment">Address:</string>
    <string name="status">Status:</string>
    <string name="all_product">All Products</string>
    <string name="add_cart">Add to cart</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="ml">100 ml</string>
    <string name="variants">Variants</string>
    <string name="brand">Brands</string>
    <string name="create_account">Create account</string>
    <string name="create">Create</string>
    <string name="already_account">Already have account? </string>
    <string name="tap_edit">Tap to edit your password</string>
    <string name="change_pass">Change Password</string>
    <string name="my_order">My Order</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="account_setting">Account Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="like_product">You make like this too</string>
    <string name="more_product">More Products</string>
    <string name="quantity">Quantity:</string>
    <string name="product_order">Product:</string>
    <string name="total">Total Price:</string>
    <string name="remove">Remove</string>
    <string name="product_to_cart">This item is added to Cart</string>
    <string name="see_cart">See your cart to proceed to checkout.</string>
    <string name="tap_here">Tap here.</string>
    <string name="ok">OK</string>
    <string name="make_pass">Make a strong password to keep your account safe.</string>
    <string name="current_pass">Current Password</string>
    <string name="pass_old">Please enter old password</string>
    <string name="pass_new">New Password</string>
    <string name="pass_request">Password must be at least 8 digits</string>
    <string name="buy_product">Buy Product</string>
    <string name="view_detail">View Detail</string>
    <string name="buy">Buy</string>
    <string name="enter_pass">Enter your current password</string>
    <string name="pass_must">Password must be at least 8 digits</string>
    <string name="update_pass">Updating password</string>
    <string name="update_pass_success">Password Updated</string>
    <string name="please_wait">Please wait</string>
    <string name="please_wait_cart">Please add product to cart to checkout</string>
    <string name="success_order">Successful order creation</string>
    <string name="update_user">Updating account information</string>
    <string name="update_user_success">Account update successful</string>
    <string name="please_info">Please enter full information</string>
    <string name="send_pass">Sending password reset request…</string>
    <string name="send_pass_success">Password reset request has been sent to your email!</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="list_order">List Order</string>
    <string name="payment_details">Payment Details</string>
    <string name="login_user">Login</string>
    <string name="login_user_success">Login…</string>
    <string name="process">Processing</string>
    <string name="confirmed">Confirmed</string>
    <string name="cancel">Cancelled</string>
    <string name="list_product">List Product</string>
    <string name="product_details">Product Detail</string>
    <string name="add_wishlist">Added to Wishlist</string>
    <string name="product_cart">The product has been added to cart</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_pass">Invalid password At least 6 characters and at least 1 special character</string>
    <string name="creating_account_success">Account successfully created</string>
    <string name="creating_account_fail">Account creation failed</string>
    <string name="creating_account">Creating an account</string>
    <string name="setting">Settings</string>
    <string name="network_disconect">Network disconected</string>
    <string name="cart_empty">Cart is empty</string>
    <string name="profile">Profile</string>
    <string name="wishlist">WishList</string>
    <string name="vie">Vietnamese</string>
    <string name="en">English</string>
    <string name="chang_language">Change Language</string>
    <string name="notification">Notification</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_success">Change language successfully</string>
    <string name="chat">Chat</string>
    <string name="shop_name">Shop Name</string>
    <string name="name_seller">Register as a seller? </string>
    <string name="Statistical">Statistical</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="total_revenue">Total revenue: </string>
    <string name="a_free">A Free &amp; Open Source Android application to download from the Project</string>
    <string name="develop_by">Developed By</string>
    <string name="see_more">see more</string>
    <string name="fillter">Fillter</string>
    <string name="dont_have">Don\'t have an account? </string>
    <string name="rate">Rate</string>
    <string name="are_you">Are you sure want to delete this from your Cart?</string>
    <string name="Cancel">Cancel</string>
    <string name="Delete">Delete</string>
    <string name="Revenue">Revenue</string>
    <string name="get_the_fast">Get the fastest</string>
    <string name="deli">Delivery groceries at home</string>
    <string name="get_your">Ger your groceries in as fast as one hour</string>
    <string name="get_started">Get Started</string>
    <string name="choose_checkout">Choose and checkout</string>
    <string name="unique">Unique products available in the booth</string>
    <string name="purchase_your">Purchase your items online</string>
    <string name="bringing">Bringing thousands of products and services to your fingertips</string>
    <string name="All">All</string>
    <string name="choose_list">Choose the list</string>
    <string name="add_product">Add product</string>
    <string name="adding_product">Adding products</string>
    <string name="add_to_success">Add to success</string>
    <string name="update_to_success">Update to success</string>
    <string name="please_enter">Please enter complete information</string>
    <string name="Submit">Submit</string>
    <string name="comment">Comment (*)</string>
    <string name="resend_code">I didn\'t receive otp code</string>
    <string name="verification">Verification Code</string>
    <string name="please_type">Please type the verification code sent to </string>
    <string name="sorry">Sorry, this product is temporarily out of stock</string>
    <string name="added_cart">Added to cart</string>
    <string name="there_are">There are not many products in stock, please enter more quantity</string>
    <string name="there_are_not">The number of products in stock is out of stock, please add more products</string>
    <string name="product_low">Sorry, the quantity of products in stock is low, please reduce the quantity</string>
    <string name="log_out">Do you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>