<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_user"
    app:startDestination="@id/nav_home">
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shop_app.dash.userdash.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.example.shop_app.dash.userdash.FavoriteFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.shop_app.dash.userdash.CartFragment"
        android:label="@string/category"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.shop_app.dash.userdash.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>