<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginTop="@dimen/dp50"
        android:layout_width="362dp"
        android:layout_gravity="center"
        android:layout_height="351dp"
        android:src="@drawable/on1" />

    <TextView
        android:gravity="center"
        android:layout_marginTop="@dimen/dp20"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_gravity="center"
        android:text="@string/deli"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:alpha="0.8"
        android:layout_marginTop="@dimen/dp10"
        android:textColor="@color/black"
        android:textSize="@dimen/sp16"
        android:layout_gravity="center"
        android:text="@string/get_your"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/started"
        style="@style/Theme.Design.NoActionBar"
        android:layout_marginStart="@dimen/dp82"
        android:layout_marginEnd="@dimen/dp82"
        android:textColor="@color/white"
        android:background="@drawable/bg_button_normal_red"
        android:layout_marginTop="50dp"
        android:layout_gravity="bottom|center"
        android:text="@string/get_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Theme.Design.NoActionBar"
        android:background="@drawable/bg_edt_login1"
        android:layout_marginStart="@dimen/dp82"
        android:layout_marginEnd="@dimen/dp82"
        android:textColor="@color/white"
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:layout_gravity="bottom|center"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>