<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OrderDetailUser"
    android:orientation="vertical">
    <include layout="@layout/toolbar"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcy_Order"
                tools:itemCount="2"
                tools:listitem="@layout/item_order_detail"
                android:layout_marginTop="@dimen/dp20"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginStart="@dimen/dp20"
                android:textSize="@dimen/sp16"
                android:layout_marginTop="@dimen/dp10"
                android:textColor="@color/black"
                android:text="@string/purchase_summary"
                style="@style/TextViewBase"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:alpha="0.5"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dp20"
                    android:textSize="@dimen/sp14"
                    android:layout_marginTop="@dimen/dp10"
                    android:textColor="@color/black"
                    android:text="@string/total_price"
                    style="@style/TextViewBase"/>
                <TextView
                    android:layout_marginEnd="@dimen/dp5"
                    android:id="@+id/tv_price_total"
                    android:textSize="@dimen/sp14"
                    android:layout_marginTop="@dimen/dp10"
                    android:textColor="@color/black"
                    style="@style/TextViewBase"/>
                <TextView
                    android:alpha="0.8"
                    android:layout_marginEnd="@dimen/dp20"
                    android:textSize="@dimen/sp14"
                    android:layout_marginTop="@dimen/dp10"
                    android:textColor="@color/black"
                    android:text="@string/price_product"
                    style="@style/TextViewBase"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:alpha="0.5"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dp20"
                    android:textSize="@dimen/sp14"
                    android:textColor="@color/black"
                    android:text="@string/shipping_change"
                    style="@style/TextViewBase"/>
                <TextView
                    android:id="@+id/tv_price_ship"
                    android:alpha="0.8"
                    android:layout_marginEnd="@dimen/dp5"
                    android:textSize="@dimen/sp14"
                    android:textColor="@color/black"
                    android:text="@string/two"
                    style="@style/TextViewBase"/>
                <TextView
                    android:alpha="0.8"
                    android:layout_marginEnd="@dimen/dp20"
                    android:textSize="@dimen/sp14"
                    android:textColor="@color/black"
                    android:text="@string/price_product"
                    style="@style/TextViewBase"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:alpha="0.7"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/dp20"
                    android:textSize="@dimen/sp16"
                    android:layout_marginTop="@dimen/dp10"
                    android:textColor="@color/black"
                    android:text="@string/total_payment"
                    style="@style/TextViewBase"/>
                <TextView

                    android:id="@+id/tv_price_paymentAll"
                    android:layout_marginEnd="@dimen/dp5"
                    android:textSize="@dimen/sp16"
                    android:layout_marginTop="@dimen/dp10"
                    android:textColor="@color/black"
                    android:text="@string/two"
                    style="@style/TextViewBase"/>
                <TextView
                    android:layout_marginEnd="@dimen/dp20"
                    android:textSize="@dimen/sp16"
                    android:layout_marginTop="@dimen/dp10"
                    android:textColor="@color/black"
                    android:text="@string/price_product"
                    style="@style/TextViewBase"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/code_orders"
                    style="@style/TextViewBase"/>
                <TextView
                    android:id="@+id/tv_OrderID"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/number"
                    style="@style/TextViewBase"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/name"
                    style="@style/TextViewBase"/>
                <TextView
                    android:id="@+id/tv_OrderName"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/number"
                    style="@style/TextViewBase"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/number_phone"
                    style="@style/TextViewBase"/>
                <TextView
                    android:id="@+id/tv_OrderPhone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/number"
                    style="@style/TextViewBase"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/address_payment"
                    style="@style/TextViewBase"/>
                <TextView
                    android:id="@+id/tv_OrderAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/number"
                    style="@style/TextViewBase"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_marginBottom="@dimen/dp20"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginEnd="@dimen/dp20"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/status"
                    style="@style/TextViewBase"/>
                <TextView
                    android:id="@+id/tv_OrderStatus"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    android:text="@string/number"
                    style="@style/TextViewBase"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>