<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp10"
            app:cardBackgroundColor="#FDC27A"
            app:cardCornerRadius="@dimen/dp10">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imag_Order"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/fram1" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp10"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_name_order"
                    style="@style/TextViewBase"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewBase"
                    android:layout_marginEnd="@dimen/dp5"
                    android:alpha="0.6"
                    android:text="@string/variants"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp13" />

                <TextView
                    android:id="@+id/tv_variant_order"
                    style="@style/TextViewBase"
                    android:alpha="0.6"
                    android:text="@string/ml"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewBase"
                    android:layout_marginEnd="@dimen/dp5"
                    android:alpha="0.6"
                    android:text="@string/quantity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp13" />

                <TextView
                    android:id="@+id/tv_quantity_order"
                    style="@style/TextViewBase"
                    android:alpha="0.6"
                    android:text="@string/two"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewBase"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:text="@string/price"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_price_order"
                    style="@style/TextViewBase"
                    android:layout_marginEnd="@dimen/dp20"
                    android:text="@string/price"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp5">

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/dp10"
        android:background="#BBBBBB" />
</LinearLayout>