<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword"
   >
    <include layout="@layout/toolbar"/>
    <LinearLayout

        android:layout_marginTop="@dimen/dp100"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_gravity="center"
            android:textSize="@dimen/sp16"
            android:textColor="@color/black"
            android:text="@string/otp"
            style="@style/TextViewBase"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:paddingEnd="@dimen/dp5"
            android:id="@+id/edt_Email"
            android:textSize="@dimen/sp14"
            android:hint="@string/email_focus"
            android:layout_marginTop="@dimen/dp20"
            android:paddingStart="15dp"
            android:drawablePadding="@dimen/dp15"
            android:drawableStart="@drawable/profile"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bg_button_normal_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_forgotPass"
            android:layout_marginTop="@dimen/dp20"
            style="@style/Theme.AppCompat.DayNight.NoActionBar"
            android:text="@string/request"
            android:textColor="@color/white"
            android:background="@drawable/bg_buy_now"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginEnd="@dimen/dp20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>