<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp20"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/ll_Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/TextViewBase"
                android:text="@string/total_price"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_Price"
                    style="@style/TextViewBase"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />

                <TextView
                    style="@style/TextViewBase"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/price_product"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/btn_BuyCart"
            style="@style/Theme.AppCompat.DayNight.NoActionBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ll_Price"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/dp82"
            android:background="@drawable/bg_buy_now"
            android:text="Buy"
            android:textColor="@color/white"
            android:textSize="@dimen/sp16" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>